some fixes. still have the bug of z-index in xeditable buttons

--- a/app/app.css
+++ b/app/app.css
@@ -1,4 +1,7 @@
-body { padding-top: 7em; font-size: 2em !important;}
+body {
+	padding-top: 7.1em;
+	font-size: 2em !important;
+}
 
 .price {
 	font-weight: bold;
@@ -23,12 +26,14 @@ body { padding-top: 7em; font-size: 2em !important;}
 }
 
 .dropdown-menu {
-	font-size: 1em !important; width: 100% !important;
+	font-size: 1em !important;
+	width: 100% !important;
 }
 
 .alert {
 	margin-bottom: 0px !important;
 }
+
 .form-group {
 	margin-bottom: 0px !important;
 }
@@ -39,32 +44,89 @@ body { padding-top: 7em; font-size: 2em !important;}
 /* span {
 	border: 1px solid gray;
 } */
-
 .editable-input.editable-has-buttons {
-	width:80% !important;
+	width: 80% !important;
 }
 
+div.special>div[class*="col-"] {
+	padding: 0;
+}
 
-      div.special > div[class*="col-"] {
-       padding: 0; 
-      }
-      @media (max-width: 979px) {
-
-        /* Remove any padding from the body */
-        body {
-          padding-top: 0;
-        }
-      }
+@media ( max-width : 979px) {
+}
 
 .row.no-gutters {
-  margin-right: 0;
-  margin-left: 0;
+	margin-right: 0;
+	margin-left: 0;
 }
-.row.no-gutters > [class^="col-"],
-.row.no-gutters > [class*=" col-"] {
-  padding-right: 0;
-  padding-left: 0;
+
+.row.no-gutters>[class^="col-"], .row.no-gutters>[class*=" col-"] {
+	padding-right: 0;
+	padding-left: 0;
 }
-/* .list-group-item {
-	padding: 10px !important;
-} */
+
+.list-group {
+	margin-bottom: 0px !important;
+}
+
+/* Animations */
+/*
+  We're using CSS transitions for when
+  the enter and move events are triggered
+  for the element that has the .repeated-item
+  class
+*/
+.repeated-item.ng-enter, .repeated-item.ng-move {
+  -webkit-transition:0.5s linear all;
+  -moz-transition:0.5s linear all;
+  -o-transition:0.5s linear all;
+  transition:0.5s linear all;
+  opacity:0;
+}
+
+/*
+ The ng-enter-active and ng-move-active
+ are where the transition destination properties
+ are set so that the animation knows what to
+ animate.
+*/
+.repeated-item.ng-enter.ng-enter-active,
+.repeated-item.ng-move.ng-move-active {
+  opacity:1;
+}
+
+/*
+  We're using CSS keyframe animations for when
+  the leave event is triggered for the element
+  that has the .repeated-item class
+*/
+.repeated-item.ng-leave {
+  -webkit-animation:0.5s my_animation;
+  -moz-animation:0.5s my_animation;
+  -o-animation:0.5s my_animation;
+  animation:0.5s my_animation;
+}
+
+@keyframes my_animation {
+  from { opacity:1; }
+  to { opacity:0; }
+}
+
+/*
+  Unfortunately each browser vendor requires
+  its own definition of keyframe animation code...
+*/
+@-webkit-keyframes my_animation {
+  from { opacity:1; }
+  to { opacity:0; }
+}
+
+@-moz-keyframes my_animation {
+  from { opacity:1; }
+  to { opacity:0; }
+}
+
+@-o-keyframes my_animation {
+  from { opacity:1; }
+  to { opacity:0; }
+}
